# capstone--source-code-optimizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Extension.md  LICENSE  README.md  \  benchmark_log.txt  benchmark_results.json  emissions.csv  intel_power_gadget_log.csv  mypy.ini  package-lock.json  powermetrics_log.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: lect.md  sup_meet.md  ta_meet.md  team_meet.md
.github/workflows/: package-build.yaml  package_build.yaml  pdf_builder.yaml  python-lint.yaml  python-test.yaml
docs/: Common.tex  Makefile  README.md
docs/Checklists/: Code-Checklist.md  MG-Checklist.md  MIS-Checklist.md  POC-Checklist.md  ProbState-Checklist.md  SRS-Checklist.md  VnV-Checklist.md
docs/Design/: README.md
docs/DevelopmentPlan/: DevelopmentPlan.tex  Makefile  README.md
docs/HazardAnalysis/: HazardAnalysis.tex  Makefile  README.md
docs/Presentations/: README.md
docs/ProblemStatementAndGoals/: Makefile  ProblemStatement.tex  README.md
docs/ReflectAndTrace/: Makefile  README.md  ReflectAndTrace.tex
docs/SRS/: Makefile  README.md  SRS.tex
docs/SRS-Volere/: SRS.tex
docs/UserGuide/: Makefile  README.md
docs/VnVPlan/: Makefile  README.md  VnVPlan.tex
docs/VnVReport/: Makefile  README.md  VnVReport.tex
docs/projMngmnt/: Final_Team_Contrib.tex  Makefile  POC_Team_Contrib.tex  Rev0_Team_Contrib.tex
outputs/: all_configured_pylint_smells.json  all_pylint_smells.json  code_smells.json  initial_emissions_data.txt  main_path_R0913_1.py  main_path_R1729_1.py  main_path_R6301_1.py  main_path_R6301_2.py  refactoring-data.json  source_ast.txt  source_cst.txt
outputs/refactored_source/: car_stuff_LMCR_line_19.py  car_stuff_LMCR_line_47.py  car_stuff_LPLR_line_34.py  car_stuff_LPLR_line_5.py  car_stuff_MIMR_line_29.py  car_stuff_UGENR_line_23.py  car_stuff_UNSDR_line_1.py  long_lambda_code_LLFR_line_10.py  long_lambda_code_LLFR_line_16.py  long_lambda_code_LLFR_line_26.py
plugin/: README.md
refs/: README.md  References.bib
src/: main.py
src-combined/: main.py
src-combined/analyzers/: base_analyzer.py  pylint_analyzer.py  ruff_analyzer.py
src-combined/measurement/: code_carbon_meter.py  measurement_utils.py
src-combined/output/: carbon_report.csv  initial_carbon_report.csv  pylint_all_smells.json  pylint_configured_smells.json  report.txt
src-combined/refactorer/: base_refactorer.py  complex_list_comprehension_refactorer.py  long_lambda_function_refactorer.py  long_message_chain_refactorer.py  long_method_refactorer.py  long_scope_chaining.py
src-combined/utils/: analyzers_config.py  factory.py
src/analyzers/: base_analyzer.py  pylint_analyzer.py
src/ecooptimizer/: README.md  __init__.py  __main__.py  config.py  example.py  exceptions.py  main.py
src/ecooptimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/measurement/: code_carbon_meter.py  custom_energy_measure.py  energy_meter.py
src/output/: ast.txt  ast_lines.txt  initial_carbon_report.csv  report.txt
src/refactorer/: base_refactorer.py  complex_list_comprehension_refactorer.py  large_class_refactorer.py  long_base_class_list.py  long_element_chain.py  long_lambda_function_refactorer.py  long_message_chain_refactorer.py  long_method_refactorer.py  long_scope_chaining.py  long_ternary_cond_expression.py
src/testing/: test_runner.py  test_validator.py
src/utils/: ast_parser.py  code_smells.py  factory.py  logger.py
src1/: __init__.py  main.py
src1/analyzers/: base_analyzer.py  main.py  pylint_analyzer.py  ternary_expression_analyzer.py  ternary_expression_pylint_analyzer.py
src1/measurements/: base_energy_meter.py  codecarbon_energy_meter.py
src1/outputs/: all_configured_pylint_smells.json  all_pylint_smells.json  final_emissions_data.txt  initial_emissions_data.txt  log.txt  refactored-test-case.py  smells.json
src1/refactorers/: base_refactorer.py  long_lambda_function_refactorer.py  long_message_chain_refactorer.py  long_parameter_list_refactorer.py  member_ignoring_method_refactorer.py  unused_imports_refactor.py  unused_imports_refactorer.py  unused_refactorer.py  use_a_generator_refactor.py  use_a_generator_refactorer.py
src1/testing/: run_tests.py
src1/utils/: analyzers_config.py  logger.py  outputs_config.py  refactorer_factory.py
test/: carbon_report.csv  test_analyzer.py
tests/: README.md  conftest.py  test_analyzer.py  test_end_to_end.py  test_energy_measure.py  test_refactorer.py
tests/_input_copies/: test_2_copy.py
tests/analyzers/: test_long_element_chain_analyzer.py  test_long_lambda_element.py  test_long_lambda_element_analyzer.py  test_long_message_chain_analyzer.py  test_pylint_analyzer.py  test_repeated_calls_analyzer.py  test_str_concat_analyzer.py
tests/api/: test_detect_route.py  test_main.py  test_refactor_route.py
tests/benchmarking/: benchmark.py
tests/checkers/: test_long_lambda_element.py
tests/controllers/: test_analyzer_controller.py  test_refactorer_controller.py
tests/input/: car_stuff.py  car_stuff_tests.py  ineffcient_code_example_1.py  ineffcient_code_example_2.py  inefficent_code_example_2_tests.py  inefficient_code_example_1.py  inefficient_code_example_2.py  inefficient_code_example_2_tests.py  inefficient_code_example_3.py  inefficient_code_example_4.py  long_param.py  repeated_calls_examples.py  string_concat_examples.py  test_string_concat_examples.py
tests/measurements/: test_codecarbon_energy_meter.py
tests/refactorers/: test_list_comp_any_all_refactor.py  test_long_element_chain.py  test_long_element_chain_refactor.py  test_long_lambda_element_refactoring.py  test_long_lambda_function.py  test_long_message_chain.py  test_long_message_chain_refactoring.py  test_long_parameter_list.py  test_long_parameter_list_refactor.py  test_member_ignoring_method.py  test_repeated_calls.py  test_repeated_calls_refactor.py  test_str_concat_in_loop.py  test_str_concat_in_loop_refactor.py
tests/smells/: test_long_element_chain.py  test_long_lambda_function.py  test_long_message_chain.py  test_long_parameter_list.py  test_repeated_calls.py  (+2 more)
(+138 files in other folders)
