[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecooptimizer"
version = "0.0.1"
dependencies = [
  "pylint",
  "rope",
  "astor",
  "codecarbon"
]
requires-python = ">=3.8"
authors = [
  {name = "Sevhena Walker"},
  {name = "Mya Hussain"},
  {name = "Nivetha Kuruparan"},
  {name = "Ayushi Amin"},
  {name = "Tanveer Brar"}
]

description = "A source code eco optimizer"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "coverage"]

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/ssm-lab/capstone--source-code-optimizer"
"Bug Tracker" = "https://github.com/ssm-lab/capstone--source-code-optimizer/issues"

[tool.pytest.ini_options]
norecursedirs = ["tests/temp*", "tests/input", "tests/_input_copies"]
addopts = ["--basetemp=tests/temp_dir"]
testpaths = ["tests"]
pythonpath = "src"

[tool.ruff]
extend-exclude = ["*tests/input/**/*.py"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "PT"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]